--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -93,7 +93,7 @@
 
 .btn-link {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   text-decoration: none;
   padding: 8px 16px;
